# local-ai-journal-assist

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.streamlit/: config.toml
FINAL-REPORT/: 0_README.md  10_PLATFORM.md  11_DASHBOARD.md  12_DIFFERENTIATION.md  13_TEST-DECISIONS.md  14_JOURNEY.md  15_TROUBLESHOOTING.md  16_COVERAGE.md  1_OVERVIEW.md  2_PIPELINE.md  3_DATASYNTH-ENGINE.md  4_DATASYNTH-QUALITY.md  5_INGEST-FEATURE.md  6_PHASE1-1_RULES.md  7_PHASE1-1_COMBO-BUILDER.md  8_PHASE1-2_ANALYTICAL.md  9_PHASE2_VAE.md
_workspace/: readme-outline.md
config/: __init__.py  audit_rules.yaml  chart_of_accounts.csv  cleaning.yaml  combo_builder.yaml  datasynth.yaml  keywords.yaml  phase1_case.yaml  phase2_review_band.yaml  phase2_subdetector_tiers.yaml  risk_keywords.yaml  schema.yaml  settings.py  sod_toxic_combinations.yaml  unsupervised_reason_tags.yaml
dashboard/: __init__.py  _analysis_status.py  _kpi.py  _phase1_truth.py  _startup.py  _state.py  _url_state.py  app.py  page_company.py  styles.py  tab_analytical.py  tab_benford.py  tab_chat.py  tab_comparison.py  tab_data_quality.py  tab_eda.py  tab_explorer.py  tab_export.py  tab_findings.py  tab_overview.py  tab_phase1.py  tab_phase2.py  tab_phase_comparison.py  tab_review_queue.py  tab_summary.py
deploy/: README.md
docs/: AUDIT_DOMAIN.md  AUDIT_DOMAIN_FINAL.md  CONSTRAINTS.md  DATASYNTH_INJECTION_SPEC.md  DATASYNTH_L3_SIDECAR_FIX_PLAN.md  DATASYNTH_PATCH_WORKFLOW.md  DATASYNTH_PATTERN_DIVERSITY_PLAN.md  DATASYNTH_PHASE1_RULE_TRUTH_DRAFT.md  DATASYNTH_UPDATE_CHECKLIST.md  DECISION.md  DETECTION_PARAMETERS.md  DETECTION_PORTFOLIO_REFRAME.md  DETECTION_RANKING_CRITERIA.md  DETECTION_REFERENCE.md  DETECTION_RESULTS_CONTRACT.md  DETECTION_RESULTS_CONTRACT_V3.md  DETECTION_RESULTS_D.md  DETECTION_RESULTS_L1.md  DETECTION_RESULTS_L2.md  DETECTION_RESULTS_L3.md  DETECTION_RESULTS_L4.md  DETECTION_RESULTS_MANIPULATION.md  DETECTION_RESULTS_MANIPULATION_V2.md  DETECTION_RESULTS_MANIPULATION_V4.md  DETECTION_RESULTS_MANIPULATION_V7_FIXED3_PHASE2.md  DETECTION_RESULTS_MANIPULATION_V7_FIXED4_PHASE2.md  DETECTION_RULES.md  EXPLAIN.md  GIT.md  PHASE1_REMODELING_PLAN.md  PHASE1_RULE_RELATIONSHIP_MAP.md  PHASE1_SCORE_DISTRIBUTION_LOG.md  PHASE1_SEPARATE_BENCHMARK_SPEC.md  PHASE1_TOPIC_SCORING_V1_COMPLETION.md  PHASE1_TOPIC_SCORING_V1_LOCK.md  PHASE2_FITTING_AUDIT.md  PHASE2_GOVERNANCE_DESIGN.md  PHASE2_INTERFACE_DESIGN.md  PHASE2_TIMESERIES_ROLE_LOCK.md  PHASE2_UNSUPERVISED_ROLE_REDESIGN_DECISION.md  (+28 more)
reports/: _v43d_verify.json  _v43d_verify.md  _v43d_verify_p01_samples.csv  fss_combo_verify_approval.md  fss_combo_verify_embezzlement.md  fss_combo_verify_expense.md  fss_combo_verify_fictitious.md  fss_combo_verify_period_end.md  fss_combo_verify_summary_20260703.md  fss_combo_verify_suspense.md  fss_data_driven_high_combos_20260703.md  fss_mined_high_combos_20260703.csv  high_combo_fss_audit_20260619.md  high_combo_structure_audit_20260619.md  materiality_usage_audit_20260621.md  normal_realism_v43_full_leak_fix.json  normal_realism_v43_full_leak_fix.md  normal_realism_v43c_full_leak_fix.json  normal_realism_v43c_full_leak_fix.md  normal_realism_v43d_full_leak_fix.json  normal_realism_v43d_full_leak_fix.md  normal_realism_v43d_full_leak_fix_p01_samples.json  normal_v47_rbac_gate_probe.md  (+92 more)
(+1897 files in other folders)
