[project]
name = "local-ai-assist"
version = "0.1.0"
description = "감사 실증절차 전표 테스트를 로컬 환경에서 자동화하는 Python 프로젝트"
requires-python = ">=3.11"

[dependency-groups]
core = [
    "pandas>=2.2",
    "openpyxl",
    "xlrd",
    "pyxlsb",
    "pyarrow",
    "charset-normalizer",
    "pandera",
    "rapidfuzz",
    "duckdb",
    "scipy",
    "numpy",
    "pyyaml",
    "pydantic-settings",
    "holidays",
    "networkx>=3.2",
]
ml = ["xgboost", "scikit-learn", "shap", "torch", "lightgbm"]
nlp = ["kiwipiepy"]
llm = ["vanna[duckdb,chromadb]", "openai>=1.50"]
dashboard = ["streamlit", "plotly", "streamlit-aggrid"]
export = ["fpdf2"]
dev = ["pytest", "ruff", "mypy"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
markers = ["slow: 대용량 데이터 또는 리포트 생성 (별도 실행)"]
